# moslin

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  README.rst  paths.py  pyproject.toml
analysis/hu_zebrafish_linnaeus/: Hyperparameters_with_persistency.py  README.rst  Zebrafish_coupling_analysis.R  hu_lot_couplings_transient_fibro_prob.py  hu_moslin_couplings_transient_fibro_prob.py  hu_moslin_fit_couplings.py  run_hu_lot.sh  run_hu_moslin.sh  run_sbatch_hu_lot.py  run_sbatch_hu_moslin.py
analysis/packer_c_elegans/: ML_2023-03-31_celegans_bar.ipynb  ML_2023-03-31_explore_c_elegans.ipynb  ML_2023-03-31_moslin_abpxp.ipynb  ML_2023-03-31_palantir.ipynb  ML_2023-03-31_prepare_data.ipynb  ML_2024-03-07_explore_c_elegans.ipynb  ML_2024-03-11_celegans_bar.ipynb  ML_2024-03-11_compute_couplings.ipynb  ML_2024-03-11_explore_c_elegans.ipynb  ML_2024-03-11_prepare_data.ipynb  ML_2024-03-12_GW_performance.ipynb  ML_2024-03-12_palantir.ipynb  ML_2024-06-04_visualize_gridsearch_results.ipynb  ML_2024-06-05_prepare_c_elegans.ipynb  ML_2024-06-08_explore_c_elegans.ipynb  ML_2024-07-08_cost_matrix_permutations.ipynb  README.rst  lot.yml  moslin.yml  run.py  utils.py
analysis/packer_c_elegans/run_gridsearch/: get_sweep_id.py  lot.yaml  moslin.yaml  request_resources.sh  submit.sh  train.py
analysis/simulations/forrow_2gene/: README.md  README.rst  ZP_2023-04-02_2gene_analysis.ipynb  ZP_2023-04-02_2gene_bifurcation_example.ipynb  ZP_2023-04-02_2gene_simulate.ipynb  ZP_2023-11-25_2gene_analysis.ipynb  run.sh  run_sbatch.py  utils.py  utils_ot.py
analysis/simulations/pan_tedsim/: README.md  README.rst  ZP_2023-04-02_tedsim_analysis.ipynb  ZP_2023-11-02_tedsim_analysis.ipynb  ZP_2024-06-14_tedsim_analysis-hamming-distance.ipynb  ZP_2024-06-14_tedsim_analysis-main.ipynb  ZP_2024-06-14_tedsim_analysis-subsample.ipynb  lot.yml  moslin.yml  run.py  run_tedsim.sh  sbatch_tedsim_all.py  tedsim_array.sh  tedsim_array_subsample.sh  tedsim_fit.py  utils_analysis.py  utils_run.py
analysis/simulations/pan_tedsim/data_generation/: README.rst  config.yml  convert_to_adata.py  generate.py  generate_data.R
data/hu_zebrafish_linnaeus/: Tree_times  Zebrafish_cell_type_colors.csv
data/packer_c_elegans/: Caenorhabditis_elegans_TF.txt  MK_2023-02-27_celegans_precise_and_abpxp.csv  ML_2023-11-06_packer_lineage_tree.gml  ML_2024-03-11_celegans_precise_and_abpxp.csv  abpxp_umap.csv
data/packer_c_elegans/palantir/: ML_2023-03-30_waypoints.csv  ML_2024-03-12_palantir_pseudotime.csv
notebooks/: ML-2020-11-04_sample_notebook.ipynb  ML-2021-05-31_sample_notebook.ipynb
src/moslin_utils/: __init__.py  constants.py  settings.py
src/moslin_utils/pl/: __init__.py  _plotting.py
src/moslin_utils/pp/: __init__.py  _preprocessing.py
src/moslin_utils/tl/: __init__.py  _benchmarking.py
src/moslin_utils/ul/: __init__.py  _tree.py  _utils.py
utils/conda_environments/: sample_environment.yml
